--- a/gameon.env
+++ b/gameon.env
@@ -1,29 +1,23 @@
-#Urls used by simpleroom and room to register, and know what their websocket address is.
-#####################################
-service_map=https://map:9443/map/v1/sites
-service_room=ws://room:9080/rooms
-service_simpleroom=ws://simpleroom:9090/rooms
-
 #Urls used to talk between services
 #####################################
 
 #a8 local proxy, which uses http (not https) on the localhost link.
-MAP_SERVICE_URL=http://127.0.0.1:6379/map/map/v1/sites
-PLAYER_SERVICE_URL=http://127.0.0.1:6379/players/players/v1/accounts
+MAP_SERVICE_URL=https://map:9443/map/v1/sites
+PLAYER_SERVICE_URL=https://players:9443/players/v1/accounts
+RECROOM_SERVICE_URL=wss://room:9443/rooms
 
 COUCHDB_SERVICE_URL=http://couchdb:5984
 
 KAFKA_SERVICE_URL=kafka:9092
-#KAFKA_SERVICE_URL=kafka01-prod01.messagehub.services.us-south.bluemix.net:9093,kafka02-prod01.messagehub.services.us-south.bluemix.net:9093,kafka03-prod01.messagehub.services.us-south.bluemix.net:9093,kafka04-prod01.messagehub.servic
 
-#Urls used by the web browser to acces GameOn.
+#Urls used by the web browser to access Game On!
 ####################################
 
 #External player url (used for queries from browser)
 FRONT_END_PLAYER_URL=https://127.0.0.1/players/v1/accounts
 #External urls for redirecting browser to after login.
 FRONT_END_SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
-FRONT_END_FAIL_CALLBACK=https://127.0.0.1/#/game
+FRONT_END_FAIL_CALLBACK=https://127.0.0.1/#/login?login_failed
 #Used to form the callback urls sent to google/twitter etc
 FRONT_END_AUTH_URL=https://127.0.0.1/auth
 
@@ -58,9 +52,3 @@ GITHUB_APP_ID=
 GITHUB_APP_SECRET=
 MESSAGEHUB_USER=
 MESSAGEHUB_PASSWORD=
-
-# Common A8 configuration.
-#####################################
-A8_REGISTRY_URL=http://registry:8080
-A8_CONTROLLER_URL=http://controller:8080
-A8_CONTROLLER_POLL=5s
