--- a/gameon.env
+++ b/gameon.env
@@ -1,13 +1,9 @@
 #Urls used to talk between services
 #####################################
-
-#a8 local proxy, which uses http (not https) on the localhost link.
-MAP_SERVICE_URL=https://map:9443/map/v1/sites
-PLAYER_SERVICE_URL=https://players:9443/players/v1/accounts
-RECROOM_SERVICE_URL=wss://room:9443/rooms
-
+MAP_SERVICE_URL=http://map:9080/map/v1/sites
+PLAYER_SERVICE_URL=http://player:9080/players/v1/accounts
+RECROOM_SERVICE_URL=ws://room:9080/rooms
 COUCHDB_SERVICE_URL=http://couchdb:5984
-
 KAFKA_SERVICE_URL=kafka:9092
 
 #Urls used by the web browser to access Game On!
