--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,29 +25,8 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
-    ports:
-      - "9089:9080"
-      - "9449:9443"
     env_file: ../gameon.${DOCKER_MACHINE_NAME}env
     container_name: auth
-    networks:
-      - gameontext
-
-  player:
-    image: gameontext/gameon-player
-    volumes:
-      - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
-    depends_on:
-      couchdb:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
-    ports:
-      - "4201:4201"
-      - "9082:9080"
-      - "9443:9443"
-    env_file: ../gameon.${DOCKER_MACHINE_NAME}env
-    container_name: player
     networks:
       - gameontext
 
@@ -60,9 +39,6 @@ services:
         condition: service_healthy
       kafka:
         condition: service_healthy
-    ports:
-      - "9099:9080"
-      - "9447:9443"
     env_file: ../gameon.${DOCKER_MACHINE_NAME}env
     container_name: map
     networks:
@@ -73,15 +49,24 @@ services:
     volumes:
       - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
     depends_on:
+      kafka:
+        condition: service_healthy
+    env_file: ../gameon.${DOCKER_MACHINE_NAME}env
+    container_name: mediator
+    networks:
+      - gameontext
+
+  player:
+    image: gameontext/gameon-player
+    volumes:
+      - 'keystore:/opt/ibm/wlp/usr/servers/defaultServer/resources/security'
+    depends_on:
       couchdb:
         condition: service_healthy
       kafka:
         condition: service_healthy
-    ports:
-      - "9086:9080"
-      - "9446:9443"
     env_file: ../gameon.${DOCKER_MACHINE_NAME}env
-    container_name: mediator
+    container_name: player
     networks:
       - gameontext
 
@@ -96,17 +81,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "1936:1936"
     container_name: proxy
-    networks:
-      - gameontext
-
-  webapp:
-    image: gameontext/gameon-webapp
-    ports:
-      - "8080:8080"
-    env_file: ../gameon.${DOCKER_MACHINE_NAME}env
-    container_name: webapp
     networks:
       - gameontext
 
@@ -117,9 +92,6 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
-    ports:
-      - "9080:9080"
-      - "9445:9443"
     env_file: ../gameon.${DOCKER_MACHINE_NAME}env
     container_name: room
     networks:
@@ -127,10 +99,15 @@ services:
 
   swagger:
     image: gameontext/gameon-swagger
-    ports:
-      - "8081:8080"
     env_file: ../gameon.${DOCKER_MACHINE_NAME}env
     container_name: swagger
+    networks:
+      - gameontext
+
+  webapp:
+    image: gameontext/gameon-webapp
+    env_file: ../gameon.${DOCKER_MACHINE_NAME}env
+    container_name: webapp
     networks:
       - gameontext
 
@@ -178,10 +155,24 @@ services:
     networks:
       - gameontext
 
+  ########Etcd######################
+  etcd:
+    image: quay.io/coreos/etcd:v2.2.2
+    command: >
+      -listen-client-urls http://0.0.0.0:2379
+      -advertise-client-urls http://etcd:2379
+      --data-dir=/etcd-data
+    volumes:
+      - etcd-data:/etcd-data
+    container_name: etcd
+    networks:
+      - gameontext
 
 networks:
   gameontext:
 
 volumes:
   keystore:
+    external: true
+  etcd-data:
     external: true
