etcd out, util container in
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -104,6 +104,14 @@ services:
     networks:
       - gameontext
 
+  util:
+    build:
+      context: ../images/gameon-util
+    env_file: ../gameon.${DOCKER_MACHINE_NAME}env
+    container_name: util
+    networks:
+      - gameontext
+
   webapp:
     image: gameontext/gameon-webapp
     env_file: ../gameon.${DOCKER_MACHINE_NAME}env
