--- a/gameon.env
+++ b/gameon.env
@@ -1,6 +1,7 @@
 #Urls used to talk between services
 #####################################
 MAP_SERVICE_URL=http://map:9080/map/v1/sites
+MAP_HEALTH_SERVICE_URL=http://map:9080/map/v1/health
 PLAYER_SERVICE_URL=http://player:9080/players/v1/accounts
 RECROOM_SERVICE_URL=ws://room:9080/rooms
 COUCHDB_SERVICE_URL=http://couchdb:5984
