Support advertised.listeners
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -127,6 +127,7 @@ services:
   kafka:
     image: gameontext/docker-kafka
     environment:
+      - ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - ADVERTISED_HOST=localhost
       - ADVERTISED_PORT=9092
       - AUTO_CREATE_TOPICS=true
