--- a/gameon.env
+++ b/gameon.env
@@ -5,6 +5,7 @@ MAP_HEALTH_SERVICE_URL=http://map:9080/map/v1/health
 PLAYER_SERVICE_URL=http://player:9080/players/v1/accounts
 RECROOM_SERVICE_URL=ws://room:9080/rooms
 COUCHDB_SERVICE_URL=http://couchdb:5984
+COUCHDB_HOST_AND_PORT=couchdb:5984
 KAFKA_SERVICE_URL=kafka:9092
 
 #Urls used by the web browser to access Game On!
