Add in room service and modify yaml resources
This commit adds in instructions for deploying the gameon app in IBM Cloud Container service.
This commit also adds in the room service and room service environment variable in the configmap.
The generated certificate from openssl is now created as a secret instead of a configmap.
The yaml files using the certificate is now pointed to the new secret.
go-run.sh script should now create a secret from the generated certificate.

Signed-off-by: AnthonyAmanse <ghieamanse@gmail.com>

--- a/kubernetes/gameon-configmap.yaml
+++ b/kubernetes/gameon-configmap.yaml
@@ -8,8 +8,10 @@ data:
   GITHUB_APP_SECRET: ''
   TWITTER_CONSUMER_KEY: ''
   TWITTER_CONSUMER_SECRET: ''
-  MAP_SERVICE_URL: http://map.gameon-system.svc.cluster.local/map/map/v1/sites
-  PLAYER_SERVICE_URL: http://player.gameon-system.svc.cluster.local/players/players/v1/accounts
+  MAP_SERVICE_URL: http://map.gameon-system.svc.cluster.local:9080/map/v1/sites
+  MAP_HEALTH_SERVICE_URL: http://map.gameon-system.svc.cluster.local:9080/map/v1/health
+  PLAYER_SERVICE_URL: http://player.gameon-system.svc.cluster.local:9080/players/v1/accounts
+  RECROOM_SERVICE_URL: ws://room.gameon-system.svc.cluster.local:9080/rooms
   COUCHDB_SERVICE_URL: http://couchdb.gameon-system.svc.cluster.local:5984
   COUCHDB_HOST_AND_PORT: couchdb.gameon-system.svc.cluster.local:5984
   KAFKA_SERVICE_URL: kafka.gameon-system.svc.cluster.local:9092
@@ -21,7 +23,7 @@ data:
   TARGET_PLATFORM: local
   SYSTEM_ID: game-on.org
   LICENSE: accept
-  PROXY_DOCKER_HOST: '192.168.9.100'
+  PROXY_DOCKER_HOST: 'gameon.192.168.9.100.xip.io'
   ADMIN_PASSWORD: admin
   WLP_SKIP_MAXPERMSIZE: 'true'
   WLP_OUTPUT_DIR: /opt/ibm/wlp/usr/servers/
