--- a/kubernetes/auth.yaml
+++ b/kubernetes/auth.yaml
@@ -26,125 +26,19 @@ spec:
         app: gameon-auth
     spec:
       volumes:
-      - name: certificate 
-        configMap:
-          name: global-cert
-          items:
-          - key: cert.pem
-            path: cert.pem
+        - name: certificate
+          secret:
+            secretName: global-cert
       containers:
-      - image: mycluster.icp:8500/gameon-system/gameon-auth:latest
-        imagePullPolicy: Always
-        name: auth
-        ports:
-        - containerPort: 9080
+        - image: gameontext/gameon-auth:latest
+          imagePullPolicy: Always
           name: auth
-        volumeMounts:
-        - name: certificate 
-          mountPath: /etc/cert
-        env:
-          - name: GITHUB_APP_ID
-            valueFrom:
-              configMapKeyRef:
+          ports:
+            - containerPort: 9080
+              name: auth
+          volumeMounts:
+            - name: certificate 
+              mountPath: /etc/cert
+          envFrom:
+            - configMapRef:
                 name: global-config
-                key: GITHUB_APP_ID
-          - name: GITHUB_APP_SECRET
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: GITHUB_APP_SECRET
-          - name: TWITTER_CONSUMER_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: TWITTER_CONSUMER_KEY
-          - name: TWITTER_CONSUMER_SECRET
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: TWITTER_CONSUMER_SECRET
-          - name: MAP_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: MAP_SERVICE_URL
-          - name: PLAYER_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: PLAYER_SERVICE_URL
-          - name: COUCHDB_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: COUCHDB_SERVICE_URL
-          - name: KAFKA_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: KAFKA_SERVICE_URL
-          - name: FRONT_END_PLAYER_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: FRONT_END_PLAYER_URL
-          - name: FRONT_END_SUCCESS_CALLBACK
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: FRONT_END_SUCCESS_CALLBACK
-          - name: FRONT_END_FAIL_CALLBACK
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: FRONT_END_FAIL_CALLBACK
-          - name: FRONT_END_AUTH_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: FRONT_END_AUTH_URL
-          - name: GAMEON_MODE
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: GAMEON_MODE
-          - name: TARGET_PLATFORM
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: TARGET_PLATFORM
-          - name: SYSTEM_ID
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: SYSTEM_ID
-          - name: LICENSE
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: LICENSE
-          - name: ADMIN_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: ADMIN_PASSWORD
-          - name: WLP_SKIP_MAXPERMSIZE
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: WLP_SKIP_MAXPERMSIZE
-          - name: WLP_OUTPUT_DIR
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: WLP_OUTPUT_DIR
-          - name: LOG_DIR
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: LOG_DIR
-          - name: MAP_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: MAP_KEY
