--- a/kubernetes/mediator.yaml
+++ b/kubernetes/mediator.yaml
@@ -26,80 +26,19 @@ spec:
         app: gameon-mediator
     spec:
       volumes:
-      - name: certificate
-        configMap:
-          name: global-cert
-          items:
-          - key: cert.pem
-            path: cert.pem
-      containers:
-      - image: mycluster.icp:8500/gameon-system/gameon-mediator:latest
-        imagePullPolicy: Always
-        name: mediator
-        ports:
-        - containerPort: 9080
-          name: mediator
-        volumeMounts:
         - name: certificate
-          mountPath: /etc/cert
-        env:
-          - name: PLAYER_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
+          secret:
+            secretName: global-cert
+      containers:
+        - image: gameontext/gameon-mediator:latest
+          imagePullPolicy: Always
+          name: mediator
+          ports:
+            - containerPort: 9080
+              name: mediator
+          volumeMounts:
+            - name: certificate
+              mountPath: /etc/cert
+          envFrom:
+            - configMapRef:
                 name: global-config
-                key: PLAYER_SERVICE_URL
-          - name: MAP_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: MAP_SERVICE_URL
-          - name: KAFKA_SERVICE_URL
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: KAFKA_SERVICE_URL
-          - name: GAMEON_MODE
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: GAMEON_MODE
-          - name: TARGET_PLATFORM
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: TARGET_PLATFORM
-          - name: SYSTEM_ID
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: SYSTEM_ID
-          - name: LICENSE
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: LICENSE
-          - name: ADMIN_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: ADMIN_PASSWORD
-          - name: WLP_SKIP_MAXPERMSIZE
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: WLP_SKIP_MAXPERMSIZE
-          - name: WLP_OUTPUT_DIR
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: WLP_OUTPUT_DIR
-          - name: LOG_DIR
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: LOG_DIR
-          - name: MAP_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: global-config
-                key: MAP_KEY
