--- a/images/util/Dockerfile
+++ b/images/util/Dockerfile
@@ -1,23 +1,14 @@
-FROM ibmjava
+FROM gameontext/docker-liberty-custom
 
 LABEL maintainer="Erin Schnabel <schnabel@us.ibm.com> (@ebullientworks)"
 
-ENV ETCD_VERSION 2.2.2
 ENV SCALA_VERSION 2.12
-ENV KAFKA_VERSION 0.10.2.0
-ENV KAFKA_HOME /opt/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION"
+ENV KAFKA_VERSION 0.10.2.1
+ENV KAFKA_HOME /opt/kafka_${SCALA_VERSION}-${KAFKA_VERSION}
 ENV PATH="${KAFKA_HOME}/bin:${PATH}"
+ENV TGZ=kafka_${SCALA_VERSION}-${KAFKA_VERSION}.tgz
 
-RUN apt-get update \
-  && apt-get install -y curl \
-  \
-# setup etcd
-  && wget https://github.com/coreos/etcd/releases/download/v${ETCD_VERSION}/etcd-v${ETCD_VERSION}-linux-amd64.tar.gz -q \
-  && tar xzf etcd-v${ETCD_VERSION}-linux-amd64.tar.gz etcd-v${ETCD_VERSION}-linux-amd64/etcdctl --strip-components=1 \
-  && rm etcd-v${ETCD_VERSION}-linux-amd64.tar.gz \
-  && mv etcdctl /usr/local/bin/etcdctl \
-  \
 # Kafka client
-  && wget -q http://www-eu.apache.org/dist/kafka/"$KAFKA_VERSION"/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz -O /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz \
-  && tar xfz /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz -C /opt \
-  && rm /tmp/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION".tgz
+RUN wget -q "http://apache.mirrors.spacedump.net/kafka/${KAFKA_VERSION}/${TGZ}" -O /tmp/${TGZ} \
+ && tar xfz /tmp/${TGZ} -C /opt \
+ && rm /tmp/${TGZ}
