--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -11,30 +11,31 @@ COUCHDB_SERVICE_URL=http://couchdb:5984
 COUCHDB_HOST_AND_PORT=couchdb:5984
 COUCHDB_USER=mapUser
 COUCHDB_PASSWORD=myCouchDBSecret
-
 KAFKA_SERVICE_URL=kafka:9092
 MESSAGEHUB_USER=
 MESSAGEHUB_PASSWORD=
 
-#Global configuration vars for running locally
+# Global configuration vars for running locally
 #####################################
 GAMEON_MODE=development
 TARGET_PLATFORM=local
-MAP_KEY=fish
 SYSTEM_ID=game-on.org
 ADMIN_PASSWORD=admin
+MAP_KEY=fish
+SWEEP_ID: sweep
+SWEEP_SECRET: sweepSecret
 
 # Auth service environment variables
 #####################################
-TWITTER_CONSUMER_KEY=
-TWITTER_CONSUMER_SECRET=
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
-GOOGLE_APP_ID=
-GOOGLE_APP_SECRET=
 GITHUB_APP_ID=
 GITHUB_APP_SECRET=
-# Callbacks: redirect back to browser after lllogin
+GOOGLE_APP_ID=
+GOOGLE_APP_SECRET=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+# Callbacks: redirect back to browser after login
 FRONT_END_SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
 FRONT_END_FAIL_CALLBACK=https://127.0.0.1/#/login?login_failed
 # Base URL used for OAuth provider flow
