:art: Fixup kubernetes initialization path
* Polish setup/up/down scripts for repeatability
* Autodetect minikube for fetching hostname, etc
* Use template files for replacing IP addresses (helm next, we swear!)
* Revise README (minikube and IBM Cloud)

Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,5 +18,5 @@ trim_trailing_whitespace = false
 [*.java]
 indent_size = 4
 
-[*.{html,js,rb,css,xml,sh,yml}]
+[*.{html,js,rb,css,xml,sh,yaml,yml}]
 indent_size = 2
