Clean up yaml files; template for values.yaml
* Move all kubectl yaml files into a kubectl directory
* Update up/down operations to work on that directory
* Add a .template for values.yml that is adjusted by setup
  to contain the ingress host
* Support ./go-admin.sh status for compose & k8s
* readiness probes

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 .gameontext*
 gameon.?*env
 docker-compose.override.yml
-kubernetes/configmap.yaml
-kubernetes/ingress.yaml
+kubernetes/kubectl/configmap.yaml
+kubernetes/kubectl/ingress.yaml
+kubernetes/chart/gameon-system/values.yaml
 slackin
 scratch
