--- a/kubernetes/chart/gameon-system/Chart.yaml
+++ b/kubernetes/chart/gameon-system/Chart.yaml
@@ -1,5 +1,7 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for Kubernetes deployment of core system services
 name: gameon-system
 version: 0.1.0
+description: A Helm chart for Kubernetes deployment of core system services
+home: https://gameontext.org
+icon: https://avatars1.githubusercontent.com/u/15149525?s=200&v=4
+appVersion: "1.0"
