:art::sparkles: swagger service added to k8s
Moved webapp to the default backend for the ingress
Cleaned up whitespace in kube yaml & charts

Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/kubernetes/.template.ingress.yaml
+++ b/kubernetes/.template.ingress.yaml
@@ -3,11 +3,17 @@ apiVersion: extensions/v1beta1
 metadata:
   name: gameon-ingress
   namespace: gameon-system
+  annotations: {}
+
 spec:
+  backend:
+    serviceName: webapp
+    servicePort: 8080
+# TLS block causes automatic redirection of http -> https
   tls:
-    - hosts:
-        - GAMEON_INGRESS
-      secretName: GAMEON_INGRESS_SECRET
+  - hosts:
+    - GAMEON_INGRESS
+    secretName: GAMEON_INGRESS_SECRET
   rules:
   - host: GAMEON_INGRESS
     http:
@@ -32,7 +38,7 @@ spec:
         backend:
           serviceName: room
           servicePort: 9080
-      - path: /
+      - path: /swagger
         backend:
-          serviceName: webapp
+          serviceName: swagger
           servicePort: 8080
