--- a/kubernetes/kubectl/auth.yaml
+++ b/kubernetes/kubectl/auth.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 9080
+  - port: 9080
   selector:
     app: gameon-auth
 ---
@@ -26,19 +26,23 @@ spec:
         app: gameon-auth
     spec:
       volumes:
-        - name: certificate
-          secret:
-            secretName: global-cert
+      - name: certificate
+        secret:
+          secretName: global-cert
       containers:
-        - image: gameontext/gameon-auth:latest
-          imagePullPolicy: Always
+      - image: gameontext/gameon-auth:latest
+        name: auth
+        ports:
+        - containerPort: 9080
           name: auth
-          ports:
-            - containerPort: 9080
-              name: auth
-          volumeMounts:
-            - name: certificate
-              mountPath: /etc/cert
-          envFrom:
-            - configMapRef:
-                name: global-config
+        readinessProbe:
+          httpGet:
+            path: /auth/health
+            port: 9080
+          initialDelaySeconds: 40
+        volumeMounts:
+        - name: certificate
+          mountPath: /etc/cert
+        envFrom:
+        - configMapRef:
+            name: global-config
