--- a/kubernetes/kubectl/map.yaml
+++ b/kubernetes/kubectl/map.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 9080
+  - port: 9080
   selector:
     app: gameon-map
 ---
@@ -26,19 +26,24 @@ spec:
         app: gameon-map
     spec:
       volumes:
-        - name: certificate
-          secret:
-            secretName: global-cert
+      - name: certificate
+        secret:
+          secretName: global-cert
       containers:
       - image: gameontext/gameon-map:latest
         imagePullPolicy: Always
         name: map
         ports:
-          - containerPort: 9080
-            name: map
+        - containerPort: 9080
+          name: map
+        readinessProbe:
+          httpGet:
+            path: /map/v1/health
+            port: 9080
+          initialDelaySeconds: 40
         volumeMounts:
-          - name: certificate
-            mountPath: /etc/cert
+        - name: certificate
+          mountPath: /etc/cert
         envFrom:
-          - configMapRef:
-              name: global-config
+        - configMapRef:
+            name: global-config
