:pushpin: Use lastgood
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/kubernetes/kubectl/auth.yaml
+++ b/kubernetes/kubectl/auth.yaml
@@ -30,7 +30,7 @@ spec:
         secret:
           secretName: global-cert
       containers:
-      - image: gameontext/gameon-auth:latest
+      - image: gameontext/gameon-auth:lastgood
         name: auth
         ports:
         - containerPort: 9080
