--- a/kubernetes/.template.values.yaml
+++ b/kubernetes/.template.values.yaml
@@ -58,7 +58,7 @@ coreServices:
 - serviceName: auth
   servicePort: 9080
   path: /auth
-  image: gameontext/gameon-auth:latest
+  image: gameontext/gameon-auth:lastgood
   configMapRef:
   - gameon-system-auth-config
   readinessProbe:
@@ -68,7 +68,7 @@ coreServices:
 - serviceName: map
   servicePort: 9080
   path: /map
-  image: gameontext/gameon-map:latest
+  image: gameontext/gameon-map:lastgood
   readinessProbe:
     path: /map/v1/health
     initialDelaySeconds: 40
@@ -76,7 +76,7 @@ coreServices:
 - serviceName: mediator
   servicePort: 9080
   path: /mediator
-  image: gameontext/gameon-mediator:latest
+  image: gameontext/gameon-mediator:lastgood
   readinessProbe:
     path: /mediator/
     initialDelaySeconds: 40
@@ -84,7 +84,7 @@ coreServices:
 - serviceName: player
   servicePort: 9080
   path: /players
-  image: gameontext/gameon-player:latest
+  image: gameontext/gameon-player:lastgood
   readinessProbe:
     path: /players/v1/health
     initialDelaySeconds: 40
@@ -100,7 +100,7 @@ coreServices:
 - serviceName: room
   servicePort: 9080
   path: /rooms
-  image: gameontext/gameon-room:latest
+  image: gameontext/gameon-room:lastgood
   readinessProbe:
     path: /rooms/
     initialDelaySeconds: 40
@@ -109,7 +109,7 @@ coreServices:
   servicePort: 8080
   skipIngress: true
   path: /
-  image: gameontext/gameon-webapp:latest
+  image: gameontext/gameon-webapp:lastgood
   readinessProbe:
     path: /health
     initialDelaySeconds: 40
