--- a/kubernetes/kubectl/webapp.yaml
+++ b/kubernetes/kubectl/webapp.yaml
@@ -26,7 +26,7 @@ spec:
         app: gameon-webapp
     spec:
       containers:
-      - image: gameontext/gameon-webapp:latest
+      - image: gameontext/gameon-webapp:lastgood
         imagePullPolicy: Always
         name: webapp
         ports:
