Add a name to ports. Make grand attempt at getting istio to work
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/kubernetes/chart/gameon-system/templates/coreservice.yaml
+++ b/kubernetes/chart/gameon-system/templates/coreservice.yaml
@@ -11,6 +11,11 @@ spec:
   type: ClusterIP
   ports:
     - port: {{ .servicePort }}
+{{- if .servicePortName }}
+      name: {{ .servicePortName }}
+{{- else }}
+      name: http
+{{- end }}
   selector:
     app: {{ $.Chart.Name }}-{{ .serviceName }}
 ---
